// Copyright 2021 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package weetbix.v1;

option go_package = "infra/appengine/weetbix/internal/config/proto;configpb";

// Config is the service-wide configuration data for Weetbix.
message Config {
  // The endpoint for Monorail APIs.
  string monorail_hostname = 1;

  // The GCS bucket that chunk contents should be archived to.
  string chunk_gcs_bucket = 2;

  // The number of workers to use when re-clustering. Maximum value is 1000,
  // which is the default max_concurrent_requests on the reclustering queue:
  // https://cloud.google.com/appengine/docs/standard/go111/config/queueref.
  //
  // If this is unset or zero, re-clustering is disabled.
  int64 reclustering_workers = 3;

  // The frequency by which to re-cluster. This is specified as a
  // number of minutes. Maximum value is 9, which is one minute less than
  // the 10 minute hard request deadline for autoscaled GAE instances:
  // https://cloud.google.com/appengine/docs/standard/go/how-instances-are-managed.
  //
  // If this is unset or zero, re-clustering is disabled.
  int64 reclustering_interval_minutes = 4;

  // Controls whether Weetbix will interact with bug-filing systems.
  // Can be used to stop Weetbix auto-bug filing and updates in
  // response to a problem.
  bool bug_updates_enabled = 5;
}
